# segmented-permutation

./: .gitignore  LICENSE  README.md  param_array.json  param_array.py  param_array.sh  pyproject.toml  translation.ipynb
translation/: config.toml  decoder.py  main.py  manager.py  model.py  preprocess.py  translate.py
